fix spacing in leadership program page

--- a/themes/catching-the-spirit/sass/_content.scss
+++ b/themes/catching-the-spirit/sass/_content.scss
@@ -27,6 +27,9 @@ img {
 // Container for white background text
 .text-container {
     padding: 3%;
+    @include desktop {
+        padding: 0 2rem;
+    }
 }
 
 // Green box container
